# Doc-VLDB-2025

./: README.md
Code/DocumentSearch/config/: Common.properties  outsource.properties
Code/DocumentSearch/config_aws/: Common.properties  outsource.properties
Code/DocumentSearch/constants/: Constant.java
Code/DocumentSearch/src/nonopt/: Client.java  Server.java
Code/DocumentSearch/src/opt/: Client.java  DBO.java  Server.java  ServerDBO.java
Code/DocumentSearch/src/outsource/: DataOutsource.java
Code/DocumentSearch/utility/: Helper.java
Code/FHE/: CMakeLists.txt  main.cpp
Instructions for running code/: Instruction_File.txt
